--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "datastore": {
-        "host": "localhost:6379",
+        "host": "redis:6379",
         "username": "",
         "password": ""
     }
