--- a/compose.yml
+++ b/compose.yml
@@ -3,6 +3,10 @@ services:
     build: .
     depends_on:
       - redis
+    develop:
+      watch:
+        - action: rebuild
+          path: .
     ports:
       - "3000:3000"
   redis:
