--- a/compose.yml
+++ b/compose.yml
@@ -13,6 +13,10 @@ services:
     image: "redis:latest"
     ports:
       - "6379:6379"
+  redis-seed:
+    image: "redis:latest"
+    depends_on:
+      - redis
     volumes:
       - ./seed-data/:/seed-data:ro
-    # command: redis-cli -h redis < /seed-data/seed.redis
+    command: sh -c 'redis-cli -h redis -p 6379 < /seed-data/seed.redis'
